website/src/css/pages/_get-started.scss
.get-started-page {
    &__hero-and-header {
        .column {
            padding: 40px 0 0 127px;
        }
        h1 {
            font-weight: bold;
            font-size: 4.5rem;
            line-height: 4.625rem;
            margin-bottom: 11px;
        }
        .subTitle {
            font-size: 1.125rem;
            line-height: 1.4125rem;
            margin-bottom: 195px;
        }
    }

    &__local {
        .btn {
            color: $blue;
            font-size: 1.125rem;
            line-height: 1.375rem;
            padding: 0;
            margin-top: 25px;
            text-align: left;
            display: block;
            width: 300px;

            .mdi-icon {
                margin-left: 20px;
            }
        }
    }
    &__search-headings {
        font-family: $font-family-sans-serif;
        font-size: 1.5rem;
        line-height: 1.875rem;
        font-weight: bold;
        padding-bottom: 1rem;
    }
    &__installtext {
        padding: 2.5rem;
        position: relative;
        font-family: $font-family-monospace;
        font-size: 1rem;
        line-height: 1.25rem;
        width: 100%;
        outline: none;
        resize: none;
        background-color: $white;
        min-height: 150px;
        min-width: 600px;
    }
    &__copytext {
        margin-left: 20px;
    }
    &__copytext:hover {
        color: #0745a1;
    }

    &.cta-container {
        position: fixed;
        bottom: 0;
        width: 100%;

        .column {
            width: 50%;
            height: 438px;
            padding: 40px 53px 0 127px;
            transition: height 2s, width 2s;

            .small-font a {
                text-decoration: underline;
                color: $sg-space-black;
            }
            .small-font {
                font-size: 1rem;
                line-height: 1.25rem;
            }
        }
        .title {
            font-size: 2.25rem;
            line-height: 3.25rem;
            font-weight: bold;
            margin-bottom: 10px;
        }
        .badge {
            text-transform: uppercase;
            background-color: $purple-2;
            padding: 7px 10px 5px;
            color: $white;
            font-weight: bold;
            font-size: 0.65rem;
            line-height: 0.815rem;
            margin-bottom: 15px;
            img {
                margin: -2px 5px 0 0;
            }
        }
        p {
            font-size: 1.125rem;
            line-height: 1.375rem;
            margin-bottom: 25px;
            width: 460px;
        }
        .small-title {
            text-transform: uppercase;
            font-weight: bold;
            font-size: 0.875rem;
            line-height: 1.125rem;
            margin-bottom: 5px;
        }
        .original-container {
            width: 558px;
            display: inline-block;
            margin-right: 40px;
        }
        .back-link {
            display: none;
            text-transform: uppercase;
            font-size: 1.125rem;
            line-height: 1.5rem;
            font-weight: normal;
            margin-bottom: 15px;
            padding: 0;

            .mdi-icon {
                margin: -4px 12px 0 0;
            }
        }
        /* When showing more content */
        .expanded {
            height: 706px;
            width: 100%;

            .temporary {
                display: none !important;
            }
            .title {
                font-size: 4rem;
                line-height: 4.625rem;
                transition: font-size 2s, line-height 2s;
            }
            .back-link {
                display: inline-block;
            }
        }
    }
}

